[package]
name = "radioguard"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio", "migrate"] }
anyhow = "1.0.75"
askama = "0.12.1"
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full"] }
chrono = "0.4.31"
axum_static = "1.2.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
strum = { version = "0.25", features = ["derive"] }
img_diff = "5.0.0"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
similar = "2.3.0"
diff2html = "0.2.3"
async-recursion = "1.0.5"
velcro = "0.5.4"
base64 = "0.21.4"
image = "0.22.5"

[package.metadata.bin]
cargo-watch = { version = "8.4.1" }
